<resources>
    <string name="app_name">swoosh</string>
    <string name="image_background">image background</string>
    <string name="logo">logo</string>
    <string name="desird_league">Desird league:</string>
    <string name="mens">Mens</string>

    <string name="womns">Womns</string>
    <string name="co_ed">co-ed</string>
    <string name="next">NEXT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominat_the_league">Find a team in your city and dominat the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="Beginner">Beginner</string>
    <string name="Baller">Baller</string>
    <string name="mmmm">TODO</string>
    <string name="i_am_a">i am a:</string>
    <string name="finesh">Finesh</string>
    <string name="todo">TODO</string>
    <string name="search_for">TextView</string>
    <string name="backgroundview">backgroundview</string>
</resources>